# DeckBridge

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: api.md  configuration.md  home-assistant.md  install.md  mqtt-integration.md
scripts/: build_bundled_assets.py  install.sh  uninstall.sh
scripts/systemd/: deckbridge.service
scripts/udev/: 99-streamdeck.rules
src/deckbridge/: __init__.py  __main__.py  cli.py  main.py  settings.py
src/deckbridge/actions/: __init__.py  active_pages.py  dispatcher.py
src/deckbridge/device/: __init__.py  cache.py  deck.py  discoverer.py  manager.py  painter.py  renderer.py
src/deckbridge/events/: __init__.py  bus.py  types.py
src/deckbridge/fonts/: __init__.py  library.py
src/deckbridge/http/: __init__.py  app.py  auth.py  routes_auth.py  routes_config.py  routes_diagnostics.py  routes_icons.py  routes_inbound.py  routes_keys.py  routes_pages.py  routes_settings.py  routes_setup.py  routes_ws.py  spa.py
src/deckbridge/icons/: library.py
src/deckbridge/logging_/: __init__.py  ringbuffer.py  setup.py
src/deckbridge/mqtt/: __init__.py  client.py  ha_discovery.py  state_subscriber.py
src/deckbridge/storage/: __init__.py  base.py  file_store.py  migrations.py  schema.py  sqlite_store.py
tests/: conftest.py
tests/fixtures/: fake_deck.py
tests/integration/: test_auth_routes.py  test_healthz.py  test_routes_config.py  test_routes_icons.py  test_routes_inbound.py  test_routes_keys.py  test_routes_pages.py  test_routes_status.py  test_routes_test_press.py  test_routes_ws.py  test_settings_routes.py  test_setup_wizard.py
tests/unit/: test_active_pages.py  test_auth.py  test_deck.py  test_deck_manager.py  test_deck_painter.py  test_event_bus.py  test_ha_discovery.py  test_icon_library.py  test_key_image_cache.py  test_log_ringbuffer.py  test_mqtt_client.py  test_press_dispatcher.py  test_renderer.py  test_settings.py  test_smoke.py  test_state_subscriber.py  test_storage_parity.py  test_storage_schema.py
web/: package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/: app.css  app.d.ts  app.html
web/src/lib/api/: client.ts  resources.ts  types.ts
web/src/lib/components/: DeckGrid.svelte  IconPicker.svelte  KeyEditor.svelte  KeyPreview.svelte  KeyTile.svelte
web/src/lib/stores/: auth.svelte.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/diagnostics/: +page.svelte
web/src/routes/editor/: +page.svelte
web/src/routes/login/: +page.svelte
web/src/routes/settings/: +page.svelte
web/src/routes/setup/: +page.svelte
