[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deckbridge"
version = "1.1.0"
description = "Network-accessible smart-button bridge for the Elgato Stream Deck"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [{ name = "DeckBridge contributors" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Home Automation",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "structlog>=24.1",
  "aiomqtt>=2.0",
  "jmespath>=1.0",
  "argon2-cffi>=23.1",
  "httpx>=0.27",  # press dispatcher uses async HTTP client for webhook actions
  "itsdangerous>=2.2",  # required by Starlette SessionMiddleware (cookie signing)
  "pillow>=10.2",
  "streamdeck>=0.9.5",
  "pyyaml>=6.0",
  "python-multipart>=0.0.9",
  "pyudev>=0.24; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-pyyaml>=6.0",
  "types-jmespath>=1.0",
  "pre-commit>=3.7",
  # Build-time only (scripts/build_bundled_assets.py): pure-Python SVG renderer
  # for converting Lucide icons to PNG. NOT a runtime dep; bundled PNGs are
  # committed to the repo and end users never run the build script.
  "svglib>=1.5",
  "reportlab>=4.0",
]
e2e = [
  "playwright>=1.44",
]

[project.scripts]
deckbridge = "deckbridge.cli:main"

[project.urls]
Homepage = "https://git.senal.dev/Senal/DeckBridge"
Repository = "https://git.senal.dev/Senal/DeckBridge"
Issues = "https://git.senal.dev/Senal/DeckBridge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/deckbridge"]
# web_dist (the built SvelteKit SPA) is bundled exclusively via the force-include
# below, which bypasses .gitignore to ship the otherwise-ignored build output.
# The `!web_dist/.gitkeep` negation in .gitignore otherwise makes the normal
# package walk ALSO pick up that one tracked file, and force-include adds it
# again -> hatchling aborts with "A second file is being added ... at the same
# path: deckbridge/web_dist/.gitkeep". The `/**` glob keeps the whole web_dist
# subtree out of the normal walk so force-include is its sole source. (`exclude`
# does not apply to force-include, so every SPA asset still ships.)
exclude = ["src/deckbridge/web_dist/**"]

[tool.hatch.build.targets.wheel.force-include]
"src/deckbridge/web_dist" = "deckbridge/web_dist"

# ---- ruff ----
[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "B",        # bugbear
  "UP",       # pyupgrade
  "RUF",      # ruff-specific
  "SIM",      # simplify
  "C4",       # comprehensions
  "PT",       # pytest style
  "TCH",      # type-checking imports
]
ignore = ["E501"]  # formatter handles line length

[tool.ruff.lint.per-file-ignores]
# Tests can use bare type-annotation imports (TC001/TC002/TC003) without the
# TYPE_CHECKING dance — readability matters more than minor import-time cost.
"tests/**" = ["B", "SIM", "TC"]
# Storage layer references Pydantic model classes that need to be importable
# at runtime for Pydantic's `get_type_hints()` resolution. Moving them under
# TYPE_CHECKING breaks model construction even with `from __future__ import
# annotations`, so we exempt the package from the TC rules.
"src/deckbridge/storage/**" = ["TC"]
# FastAPI's File()/Form()/Depends() are sentinel factory calls used in default
# args by design; they're not the bare-mutable-default footgun B008 normally
# catches. The type-only `pass` block is harmless boilerplate for symmetry.
"src/deckbridge/http/routes_*.py" = ["B008", "TC005"]

[tool.ruff.format]
quote-style = "double"

# ---- mypy ----
[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["src/deckbridge", "tests"]

[[tool.mypy.overrides]]
module = ["StreamDeck.*", "pyudev.*", "argon2.*", "PIL.*"]
ignore_missing_imports = true

# ---- pytest ----
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
  "integration: marks tests requiring a broker or extra services",
  "linux_only: marks tests that only run on Linux (pyudev, etc.)",
]
